packages/naga/native/include/naga_native.h

// naga_native - FFI bindings for naga WGSL validation
// AUTO-GENERATED by cbindgen - DO NOT EDIT


#ifndef NAGA_NATIVE_H
#define NAGA_NATIVE_H

#include <stdint.h>
#include <stdbool.h>

/**
 * A single validation error.
 */
typedef struct NagaError {
  /**
   * Error message (null-terminated UTF-8)
   */
  char *message;
  /**
   * Byte offset into source (-1 if not available)
   */
  int32_t offset;
  /**
   * Length of error span (-1 if not available)
   */
  int32_t length;
} NagaError;

/**
 * Result of WGSL validation.
 */
typedef struct NagaValidationResult {
  /**
   * Number of errors (0 = valid)
   */
  uint32_t error_count;
  /**
   * Pointer to array of NagaError (null if error_count == 0)
   */
  struct NagaError *errors;
} NagaValidationResult;

/**
 * Validate WGSL source code.
 *
 * Returns a NagaValidationResult with error_count=0 if valid,
 * or error_count>0 with error details if invalid.
 *
 * The caller must call naga_free_validation_result() to free the result.
 */
 struct NagaValidationResult naga_validate_wgsl(const char *source, int32_t _source_len) ;

/**
 * Free a validation result returned by naga_validate_wgsl.
 */
 void naga_free_validation_result(struct NagaValidationResult result) ;

#endif  /* NAGA_NATIVE_H */