packages/naga/lib/src/ffi/bindings_generated.dart

// AUTO-GENERATED by ffigen - DO NOT EDIT
// Run `./gen_bindings.sh` to regenerate
//
// ignore_for_file: non_constant_identifier_names
// ignore_for_file: unused_field

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
@ffi.DefaultAsset('package:naga/naga_native')
library;

import 'dart:ffi' as ffi;

/// Validate WGSL source code.
///
/// Returns a NagaValidationResult with error_count=0 if valid,
/// or error_count>0 with error details if invalid.
///
/// The caller must call naga_free_validation_result() to free the result.
@ffi.Native<NagaValidationResult Function(ffi.Pointer<ffi.Char>, ffi.Int32)>()
external NagaValidationResult naga_validate_wgsl(
  ffi.Pointer<ffi.Char> source,
  int _source_len,
);

/// Free a validation result returned by naga_validate_wgsl.
@ffi.Native<ffi.Void Function(NagaValidationResult)>()
external void naga_free_validation_result(
  NagaValidationResult result,
);

/// A single validation error.
final class NagaError extends ffi.Struct {
  /// Error message (null-terminated UTF-8)
  external ffi.Pointer<ffi.Char> message;

  /// Byte offset into source (-1 if not available)
  @ffi.Int32()
  external int offset;

  /// Length of error span (-1 if not available)
  @ffi.Int32()
  external int length;
}

/// Result of WGSL validation.
final class NagaValidationResult extends ffi.Struct {
  /// Number of errors (0 = valid)
  @ffi.Uint32()
  external int error_count;

  /// Pointer to array of NagaError (null if error_count == 0)
  external ffi.Pointer<NagaError> errors;
}
